--- a/src/main/resources/pl/galusgaming/bibliotekagraficzna/hello-view.fxml
+++ b/src/main/resources/pl/galusgaming/bibliotekagraficzna/hello-view.fxml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="pl.galusgaming.bibliotekagraficzna.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #424242;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <AnchorPane layoutX="150.0" layoutY="78.0" prefHeight="300.0" prefWidth="300.0" style="-fx-background-color: rgba(255,255,255,0.2); -fx-background-radius: 50;">
+         <children>
+            <TextField fx:id="username" layoutX="29.0" layoutY="58.0" prefHeight="36.0" prefWidth="242.0" promptText="username" style="-fx-background-color: #fff; -fx-background-radius: 10; -fx-padding: 10; -fx-alignment: center;" />
+            <TextField fx:id="password" layoutX="29.0" layoutY="132.0" prefHeight="36.0" prefWidth="242.0" promptText="password" style="-fx-background-color: #fff; -fx-background-radius: 10; -fx-padding: 10; -fx-alignment: center;" />
+            <Button layoutX="83.0" layoutY="196.0" mnemonicParsing="false" onAction="#onLogin" prefHeight="36.0" prefWidth="135.0" style="-fx-background-color: #0390fc; -fx-padding: 5; -fx-background-radius: 20;" text="Login" />
+         </children>
+      </AnchorPane>
+      <Text fill="WHITE" layoutX="203.0" layoutY="62.0" stroke="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Zaloguj" textAlignment="CENTER">
+         <font>
+            <Font name="Calibri Bold" size="64.0" />
+         </font>
+      </Text>
+   </children>
+</AnchorPane>
