--- a/src/main/resources/pl/galusgaming/bibliotekagraficzna/logged.fxml
+++ b/src/main/resources/pl/galusgaming/bibliotekagraficzna/logged.fxml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
 
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #424242;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Text fill="WHITE" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Witaj username w zarządzaniu biblioteką" textAlignment="CENTER" wrappingWidth="600.0">
+         <font>
+            <Font name="Calibri Bold" size="24.0" />
+         </font>
+      </Text>
+      <AnchorPane layoutX="175.0" layoutY="50.0" prefHeight="300.0" prefWidth="250.0" style="-fx-background-color: rgba(255,255,255,0.2); -fx-background-radius: 50;">
+         <children>
+            <Button layoutX="99.0" layoutY="43.0" mnemonicParsing="false" text="Button" />
+            <Button layoutX="99.0" layoutY="94.0" mnemonicParsing="false" text="Button" />
+            <Button layoutX="99.0" layoutY="150.0" mnemonicParsing="false" text="Button" />
+            <Button layoutX="99.0" layoutY="202.0" mnemonicParsing="false" text="Button" />
+            <Button layoutX="99.0" layoutY="261.0" mnemonicParsing="false" text="Logout" />
+         </children>
+      </AnchorPane>
+      <Button layoutX="533.0" layoutY="365.0" mnemonicParsing="false" text="Button" />
+   </children>
 </AnchorPane>
